--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
 /* Nav bar styles */
 header {
     padding: 10px 20px;
-    background-color: #9e9e9e;
+    background-color: #b4d2ba;
     margin: 0;
 }
 
