--- a/css/style.css
+++ b/css/style.css
@@ -205,11 +205,17 @@ nav ul {
 .card-image {
     width: 80%;
     height: 300px;
-    background-color: #ccc;
     margin-bottom: 10px;
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+
+.restaurant-img {
+    width: 100%;       /* or set a fixed size like 300px */
+    height: 100%;      /* maintains aspect ratio */
+    border-radius: 10px; /* optional for rounded corners */
+    object-fit: cover;  /* ensures the image fills its container nicely */
 }
 
 .stars {
