--- a/css/style.css
+++ b/css/style.css
@@ -627,8 +627,8 @@ body {
  
  /* ============================= Collections.html ============================= */
  main.collection {
-  padding-left: clamp(1rem, 4vw, 3rem);
-  padding-right: clamp(1rem, 4vw, 3rem);
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .collection-header {
@@ -640,13 +640,9 @@ body {
   margin-top: 1rem;
 }
 
-.delete-deck-button {
-   margin-bottom: 2rem;
-}
-
 .collection-header h2 {
   font-family: "Permanent Marker", sans-serif;
-  font-size: clamp(1.8rem, 2.5vw + 1rem, 2.4rem);
+  font-size: 2rem;
 }
 
 
@@ -663,9 +659,9 @@ body {
 .deck-list {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(13rem, 1fr));
-  gap: clamp(1rem, 5rem, 10rem);
-  padding-left: clamp(1rem, 3vw, 2rem);
-  padding-right: clamp(1rem, 3vw, 2rem);
+  gap: 5rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .collection-restaurant-card {
@@ -673,7 +669,7 @@ body {
   max-width: 15rem;   /* card size */
   max-height: 26rem;
   padding: 0.75rem;
-  padding-block-end: 2.5rem;
+  padding-bottom: 2rem;
   border-radius: 10px;
   background: #fff;
   box-shadow: 0 2px 6px rgba(0,0,0,.06);
@@ -712,6 +708,7 @@ body {
 /* ===== CLEAR-BUTTON ===== */
 .clear-deck-btn {
   padding: 0.75rem 1.5rem;
+  margin-bottom: 2rem;
   font-size: 1rem;
   color: #fff;
   background-color: #ef6060;
