--- a/css/style.css
+++ b/css/style.css
@@ -495,14 +495,20 @@ body {
     transform: rotateY(180deg);
  }
  
+ .restaurant-card.flipped {
+   transform: rotateY(180deg);
+ }
  
+ .restaurant-card.flipped .card-front {
+   z-index: -1000;
+ }
+
  .card-front, .card-back {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    backface-visibility: hidden;    /* Hide the "other side" when not visible */
     border-radius: 20px;
     padding: 1.5rem;
     box-sizing: border-box;
@@ -511,13 +517,12 @@ body {
  
  .card-front {
     background-color: #ffffff;
-    z-index: 2;                     /* Ensure it's above the back side initially */
+    z-index: 2; /* Ensure it's above the back side initially */
  }
  
  
  .card-back {
     background-color: #ffffff;
-    transform: rotateY(180deg);
     display: flex;
     justify-content: center;
     align-items: center;
