--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,19 @@ body {
     background-color: #b4d2ba;
     margin: 0;
  }
- 
+ #clear-filters-btn {
+   position: absolute;
+   top: 70px;                
+   right: 20px;            
+   font-size: 1rem;          
+   padding: 0.25rem 0.5rem;  
+   background-color: #b4d2ba; 
+   color: #ffffff; 
+   border: none;
+   border-radius: 10px; 
+   cursor: pointer;
+   transition: background-color 0.3s ease;
+ }
  
  nav a {
     text-decoration: none;
