--- a/css/style.css
+++ b/css/style.css
@@ -248,7 +248,7 @@ nav ul {
   bottom: -1em;
   left: 0;
   right: 0;
-  margin-inline: auto;
+  margin: auto;
 }
 
 /* landing instructions desktop */
