--- a/css/style.css
+++ b/css/style.css
@@ -675,6 +675,20 @@ nav ul {
 }
 
 
+.card-img-container {
+  width: 100%;
+  height: 200px;    
+  overflow: hidden;
+  border-radius: 12px;
+  margin: 1rem 0;
+}
+
+.card-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .reviews {
   transition: opacity 0.3s ease;
   opacity: 0;
