Reverted buttons back to div to pass validation

--- a/css/style.css
+++ b/css/style.css
@@ -329,8 +329,7 @@ nav ul {
 /* filters progress bar styles */
 
 .step {
-  background: none;
-  padding: 0;
+  cursor: pointer;
 }
 
 .step:hover .step-text {
