--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,13 @@ header {
    margin: 0;
 }
 
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+  gap: 16px;   
+  padding: 16px;  
+}
+
 #clear-filters-btn {
    position: absolute;
    top: 70px;                
@@ -434,15 +441,32 @@ nav ul {
  }
 
    /* — Restaurant Card — */
-   .restaurant-card {
+   .restaurant-card{
       background-color: #ffffff;              /* card bg */
       border-radius: 20px;
       padding: 1rem;
-      width: 300px;
+      width: 100%;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
       text-align: center;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
       transition: transform 0.3s ease-out, opacity 0.3s ease-out;
     }
+    .restaurant-name {
+      font-size: 1.5rem;
+      margin: 0.5rem 0;
+      color: #4b543b;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      line-height: 1.2;
+      max-height: 2.4em;
+    }
+    
     .restaurant-card h2 {
       font-size: 36px;                        /* title 36px */
       margin: 0.5rem 0;
